--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link
+            rel="stylesheet"
+            href="css/style.css"
+            type="text/css" />
     </head>
     <body>
         <ul>
             <li><b><a href="index.html">Главная</a></b></li>
-            <li><a href="news.html">Статьи</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="gallery.html">Галерея изображений</a></li>
-            <li><a href="registration.html">Регистрация</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
+            <li><a href="news/news.html">Статьи</a></li>
+            <li><a href="catalog/catalog.html">Каталог</a></li>
+            <li><a href="gallery/gallery.html">Галерея изображений</a></li>
+            <li><a href="registration/registration.html">Регистрация</a></li>
+            <li><a href="contacts/contacts.html">Контакты</a></li>
         </ul>
     </body>
     <footer>
