Create html-code for BOX

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <main>
-        <section class="text">
+        <section id="text">
             <div>
                 <p>Start something new</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
@@ -42,6 +42,34 @@
                 <p> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
                     consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
                      ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+            </div>
+        </section>
+        <section id="box">
+            <div id="box_1row">
+                <div>
+                    <p class="box_caption">Design quality</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <a class="box_link">Find Out more </a>
+                </div>
+                <div>
+                    <p class="box_caption">Built to last</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <a class="box_link">Find Out more </a>
+                </div>
+                <div>
+                    <p class="box_caption">Our clients</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <a class="box_link">Find Out more </a>
+                </div>
+                <div>
+                    <p class="box_caption">How to shoo great</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <a class="box_link">Find Out more </a>
+                </div>
             </div>
         </section>
     </main>
