--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,57 +18,120 @@
         </div>
     </header>
     <main>
-        <section id="text">
-            <div>
-                <p>Start something new</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+        <section id="text1" class="text">
+            <div> 
+                <h1 class="text_caption">Start something new</h1>
+                <div id="text1_row">
+                    <div class="text1_column">
+                    <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     nisi ut aliquip ex ea commodo consequat. </p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    <p class="text_body">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                      dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                       proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                       Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
                       accusantium doloremque laudantium, totam rem aperiam.</p>
-                <p> eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                    <p class="text_body"> eaque ipsa quae ab illo inventore veritatis et quasi architecto
                      beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
                      voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
                      magni dolores eos qui ratione voluptatem.</p> 
-            </div>
-            <div>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut 
+                    </div>
+                    <div class="text1_column" id="text1_column2">
+                    <p class="text_body">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut 
                     fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem 
                     sequi nesciunt. </p>   
-                <p> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+                    <p class="text_body"> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
                     consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
                      ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-            </div>
+                    </div>
+                </div>
+            </div> 
         </section>
         <section id="box">
             <div id="box_1row">
-                <div>
+                <section class="box_block">
                     <p class="box_caption">Design quality</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <a class="box_link">Find Out more </a>
-                </div>
-                <div>
+                    <p><a class="box_link">Find Out more  &rarr;</a></p>
+                </section>
+                <section class="box_block">
                     <p class="box_caption">Built to last</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <a class="box_link">Find Out more </a>
-                </div>
-                <div>
+                    <p><a class="box_link">Find Out more&emsp;&rarr;</a></p>
+                </section>
+                <section class="box_block">
                     <p class="box_caption">Our clients</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <a class="box_link">Find Out more </a>
-                </div>
-                <div>
-                    <p class="box_caption">How to shoo great</p>
+                    <p><a class="box_link">Get Insights&emsp;&nbsp;&nbsp;&rarr;</a></p>
+                </section>
+                <section class="box_block">
+                    <p class="box_caption">Technologies</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <a class="box_link">Find Out more </a>
+                    <p><a class="box_link">Find Out more&emsp;&rarr;</a></p>
+                </section>
+            </div>
+            <div id="box_2row">
+                <section class="box_block">
+                    <p class="box_caption">Sign up & see why</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <p><a class="box_link">Get Started Now&emsp;&rarr;</a></p>
+                </section>
+                <section class="box_block">
+                    <p class="box_caption">Perfect pictures</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <p><a class="box_link">Find Out more&emsp;&rarr;</a></p>
+                </section>
+                <section class="box_block">
+                    <p class="box_caption">New</p>
+                    <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+                        tempor incididunt ut adipisicing .</p>
+                    <p><a class="box_link">Get Started Now&emsp;&rarr;</a></p>
+                </section>
+            </div>
+        </section>
+        <section id="text2" class="text">
+            <div>
+                <p class="text_caption">A look at the details</p>
+                <div id="text2_row">
+                    <div class="text2_column">
+                        <h2 class="text_caption-2level">Web based</h2>
+                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
+                    <div class="text2_column">
+                        <h2 class="text_caption-2level">Performance</h2>
+                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
+                    <div class="text2_column">
+                        <h2 class="text_caption-2level">Clultral</h2>
+                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
+                    <div class="text2_column">
+                        <h2 class="text_caption-2level">Sustainability</h2>
+                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
                 </div>
             </div>
         </section>
