--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -11,7 +11,7 @@
         <img src="images/header-iphone.png" alt="IPhone">
         <img src="images/logo.png" alt="logo">
         <div>
-            <p>Picture perfect</p>
+            <h1>Picture perfect</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
@@ -20,28 +20,28 @@
     <main>
         <section id="text1" class="text">
             <div> 
-                <h1 class="text_caption">Start something new</h1>
+                <h2>Start something new</h2>
                 <div id="text1_row">
                     <div class="text1_column">
-                    <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     nisi ut aliquip ex ea commodo consequat. </p>
-                    <p class="text_body">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    <p class="basic_text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                      dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                       proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                       Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
                       accusantium doloremque laudantium, totam rem aperiam.</p>
-                    <p class="text_body"> eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                    <p class="basic_text"> eaque ipsa quae ab illo inventore veritatis et quasi architecto
                      beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
                      voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
                      magni dolores eos qui ratione voluptatem.</p> 
                     </div>
                     <div class="text1_column" id="text1_column2">
-                    <p class="text_body">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut 
+                    <p class="basic_text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut 
                     fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem 
                     sequi nesciunt. </p>   
-                    <p class="text_body"> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+                    <p class="basic_text"> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
                     consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
                      ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                     </div>
@@ -54,25 +54,25 @@
                     <p class="box_caption">Design quality</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Find Out more  &rarr;</a></p>
+                    <p><a class="find-out-more-text">Find Out more  &rarr;</a></p>
                 </section>
                 <section class="box_block">
                     <p class="box_caption">Built to last</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Find Out more&emsp;&rarr;</a></p>
+                    <p><a class="find-out-more-text">Find Out more&emsp;&rarr;</a></p>
                 </section>
                 <section class="box_block">
                     <p class="box_caption">Our clients</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Get Insights&emsp;&nbsp;&nbsp;&rarr;</a></p>
+                    <p><a class="find-out-more-text">Get Insights&emsp;&nbsp;&nbsp;&rarr;</a></p>
                 </section>
                 <section class="box_block">
                     <p class="box_caption">Technologies</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Find Out more&emsp;&rarr;</a></p>
+                    <p><a class="find-out-more-text">Find Out more&emsp;&rarr;</a></p>
                 </section>
             </div>
             <div id="box_2row">
@@ -80,53 +80,94 @@
                     <p class="box_caption">Sign up & see why</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Get Started Now&emsp;&rarr;</a></p>
+                    <p><a class="find-out-more-text">Get Started Now&emsp;&rarr;</a></p>
                 </section>
                 <section class="box_block">
                     <p class="box_caption">Perfect pictures</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Find Out more&emsp;&rarr;</a></p>
+                    <p><a class="find-out-more-text">Find Out more&emsp;&rarr;</a></p>
                 </section>
                 <section class="box_block">
                     <p class="box_caption">New</p>
                     <p class="box_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
                         tempor incididunt ut adipisicing .</p>
-                    <p><a class="box_link">Get Started Now&emsp;&rarr;</a></p>
+                    <p><a class="find-out-more-text">Get Started Now&emsp;&rarr;</a></p>
                 </section>
             </div>
         </section>
         <section id="text2" class="text">
             <div>
-                <p class="text_caption">A look at the details</p>
+                <h2>A look at the details</h2>
                 <div id="text2_row">
                     <div class="text2_column">
-                        <h2 class="text_caption-2level">Web based</h2>
-                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        <h3 class="text_caption-2level">Web based</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                              sed do eiusmod tempor incididunt ut labore et dolore 
                              magna aliqua. Ut enim ad minim veniam, quis nostrud 
                              exercitation ullamco laboris nisi ut aliquip ex ea 
                              commodo consequat. </p>
                     </div>
                     <div class="text2_column">
-                        <h2 class="text_caption-2level">Performance</h2>
-                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        <h3 class="text_caption-2level">Performance</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                              sed do eiusmod tempor incididunt ut labore et dolore 
                              magna aliqua. Ut enim ad minim veniam, quis nostrud 
                              exercitation ullamco laboris nisi ut aliquip ex ea 
                              commodo consequat. </p>
                     </div>
                     <div class="text2_column">
-                        <h2 class="text_caption-2level">Clultral</h2>
-                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        <h3 class="text_caption-2level">Clultral</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                              sed do eiusmod tempor incididunt ut labore et dolore 
                              magna aliqua. Ut enim ad minim veniam, quis nostrud 
                              exercitation ullamco laboris nisi ut aliquip ex ea 
                              commodo consequat. </p>
                     </div>
                     <div class="text2_column">
-                        <h2 class="text_caption-2level">Sustainability</h2>
-                        <p class="text_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        <h3 class="text_caption-2level">Sustainability</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="full-image">
+            <div id="full-image_text"> 
+                <h1>More power behind every pixel</h1>
+                <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                     ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="find-out-more-text">See the options&emsp;&rarr;</a></p>
+            </div>
+        </section>
+        <section id="green-block">
+            <div id="green-block_text">
+                <h2>Reasons to get onboard</h2>
+                <div id="green-block_row">
+                    <div class="green-block_column">
+                        <h3 class="text_caption-2level">Web based</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
+                    <div class="green-block_column">
+                        <h3 class="text_caption-2level">Team login</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore 
+                             magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                             exercitation ullamco laboris nisi ut aliquip ex ea 
+                             commodo consequat. </p>
+                    </div>
+                    <div class="green-block_column">
+                        <h3 class="text_caption-2level">Great Support</h3>
+                        <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                              sed do eiusmod tempor incididunt ut labore et dolore 
                              magna aliqua. Ut enim ad minim veniam, quis nostrud 
                              exercitation ullamco laboris nisi ut aliquip ex ea 
