Create css+html code BUYING

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -176,9 +176,33 @@
                 </div>
             </div>
         </section>
+        <section id="buying">
+            <div id="buying_row">
+                <div class="buying_column">
+                    <p class="buying_figure" id="buying_legacy">LEGACY</p>
+                    <h2>Go it solo</h2>
+                    <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna
+                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                    <div>Buy now $9</div>
+                    <img src="images/fa-apple.png" alt="logo apple">
+                    <img src="images/fa-windows.png" alt="logo windows">
+                </div>
+                <div class="buying_column">
+                    <p class="buying_figure" id="buying_most-popular">Most Popular</p>
+                    <h2>Team Plan</h2>
+                    <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna
+                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                    <div>Buy now $18</div>
+                    <img src="images/fa-apple.png" alt="logo apple">
+                    <img src="images/fa-windows.png" alt="logo windows">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
