Create css+html code FOOTER

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -202,6 +202,47 @@
         </section>
     </main>
     <footer>
+        <div id="footer_row">
+            <div class="footer_column">
+                <h3>Get in touch</h3>
+                <p class="basic_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                <div id="footer_row-in-column">
+                    <div class="footer_column-in-column">
+                        <h3>Resources</h3>
+                        <p class="basic_text">Tour</p>
+                        <p class="basic_text">Customers</p>
+                        <p class="basic_text">Pricing and Plans</p>
+                        <p class="basic_text">New Features</p>
+                        <p class="basic_text">Education</p>
+                    </div>
+                    <div class="footer_column-in-column">
+                        <h3>Features</h3>
+                        <p class="basic_text">Tour</p>
+                        <p class="basic_text">Customers</p>
+                        <p class="basic_text">Pricing and Plans</p>
+                        <p class="basic_text">New Features</p>
+                        <p class="basic_text">Education</p>
+                    </div>
+                    <div class="footer_column-in-column">
+                        <h3>How To’s</h3>
+                        <p class="basic_text">Tour</p>
+                        <p class="basic_text">Customers</p>
+                        <p class="basic_text">Pricing and Plans</p>
+                        <p class="basic_text">New Features</p>
+                        <p class="basic_text">Education</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_column">
+                <h3>Stay in touch</h3>
+                <div id="footer_send"></div>
+                <button></button>
+                <p class="basic_text" id="footer_spam">We don’t send spam. Actually, who are we kiding, we’ll spam 
+                    the shit out of you’r inbox</p>
+            </div>
+        </div>
         
     </footer>
 </body>
