Replace footer-div with input-email (CSS3)

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -237,7 +237,7 @@
             </div>
             <div class="footer_column">
                 <h3>Stay in touch</h3>
-                <div id="footer_send"></div>
+                <input type=“email” required/>
                 <button></button>
                 <p class="basic_text" id="footer_spam">We don’t send spam. Actually, who are we kiding, we’ll spam 
                     the shit out of you’r inbox</p>
