Fix error after testing (validator)

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Homework</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -237,7 +237,7 @@
             </div>
             <div class="footer_column">
                 <h3>Stay in touch</h3>
-                <input type=“email” required/>
+                <input type="email" required/>
                 <button></button>
                 <p class="basic_text" id="footer_spam">We don’t send spam. Actually, who are we kiding, we’ll spam 
                     the shit out of you’r inbox</p>
